[package]
name = "text-evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
futures = "0.3.28"
hyper = { version = "0.14.25", features = ["full"] }
nanoid = "0.4.0"
rand = "0.8.5"
serde = "1.0.159"
serde_derive = "1.0.159"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
